@@ -21,7 +21,6 @@ Architecture: all
 Depends: ${misc:Depends}, kde-config-cron (>= ${source:Version}),
  ksystemlog (>= ${source:Version}),
  kuser (>= ${source:Version})
-Recommends: system-config-printer-kde (>= ${source:Version})
 Description: system administration tools from the official KDE release
  KDE is produced by an international technology team that creates free and open
  source software for desktop and portable computing. Among KDE's products are a
@@ -88,17 +87,6 @@ Depends: ${shlibs:Depends}, ${misc:Depends}
 Suggests: khelpcenter4
 Description: user and group administration tool
  KUser is an application for managing users and groups on your system.
- .
- This package is part of the KDE administration module.
-
-Package: system-config-printer-kde
-Section: admin
-Architecture: all
-Depends: ${python:Depends}, ${misc:Depends}, python-qt4-dbus,
- python-kde4 (>= 4:4.2.0), python-cupshelpers (>= 1.2.3-0.2~), python-gobject
-Description: printer configuration utility
- This package contains a KDE application which can be used to configure
- and manage printers.
  .
  This package is part of the KDE administration module.
 
