@@ -7,6 +7,7 @@ kdeadmin (4:4.10.2-0r0) UNRELEASED; urgency=low
   * Bump kdepimlibs5-dev build dependency to 4:4.10.2.
   * Remove python build dependency, system-config-printer-kde has been removed.
   * Add nepomuk-core-dev build dependency.
+  * Remove system-config-printer-kde package which has been dropped upstream.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 06 Apr 2013 01:30:34 +0200
 
